--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <script src="vendor/jquery.query-object.js"></script>
-<script src="vendor/parse-qs.js"></script>
+<script src="js/parse-qs.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
