--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <title>bookreader demo</title>
+    <title>CCA Libraries Bookreader</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
     <link rel="stylesheet" type="text/css" href="bookreader/BookReader/BookReader.css" id="BRCSS">
     <!-- Custom CSS overrides -->
