working (!) usemin tasks, closes #6

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 </div>
 </div>
 
+<!-- build:js js/app.min.js -->
 <script src="vendor/jquery.query-object.js"></script>
 <script src="js/parse-qs.js"></script>
 <script src="js/app.js"></script>
+<!-- endbuild -->
 </body>
 </html>
