replace latin filler text with description of project

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="opener">
         <div id="openerLogo"><img src="cca-images/ccatheme_logo.gif"></div>
         <div>
-            <h1>Book Reader</h1>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</p>
+            <h1>CCA Libraries Artist's Books Collection</h1>
+            <p>The CCA Libraries have cultivated <a href="http://library.cca.edu/search~S1?/dArtists%27+books+collection.+CCA/dartists+books+collection+cca/-3%2C-1%2C0%2CB/exact&FF=dartists+books+collection+cca&1%2C338%2C">a collection of Artists' Books</a>, works of art that utilize the codex form. This online bookreader attempts to capture the diverse and intriguing nature of these books via small digital samples of a few volumes. Enjoy!</p>
         </div>
     </div>
 </div>
