new blurb on home pg

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div id="openerLogo"><img src="cca-images/ccatheme_logo.gif"></div>
         <div>
             <h1>CCA Libraries Artist's Books Collection</h1>
-            <p>The CCA Libraries have cultivated <a href="http://library.cca.edu/search~S1?/dArtists%27+books+collection.+CCA/dartists+books+collection+cca/-3%2C-1%2C0%2CB/exact&FF=dartists+books+collection+cca&1%2C338%2C">a collection of Artists' Books</a>, works of art that utilize the codex form. This online bookreader attempts to capture the diverse and intriguing nature of these books via small digital samples of a few volumes. Enjoy!</p>
+            <p>This book is part of the CCA Libraries <cite>Artists' Books Collection</cite>, comprised of approximately 340 unique works. The collection includes works by faculty members, students, alumni, and internationally recognized artists. <a href="http://library.cca.edu/search~S1?/dArtists%27+books+collection.+CCA/dartists+books+collection+cca/-3%2C-1%2C0%2CB/exact&FF=dartists+books+collection+cca&1%2C338%2C">The Artists' Books Collection</a>, housed in the Meyer and Simpson Libraries, was developed to support study and teaching of bookworks as an art form. The collection is non-circulating but browsable within the library by request.</p>
+            <p>You will find digital excerpts of each artist book <a href="https://vault.cca.edu/hierarchy.do?topic=a7b976d5-5316-44da-b06e-7374cd100075&page=1">in VAULT</a>. The online bookreader attempts to capture the diverse and intriguing nature of the book as art form. Enjoy!</p>
         </div>
     </div>
 </div>
