minify & concatenate CSS files

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>CCA Libraries Bookreader</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
-    <!-- @TODO these should be concatenated & minifed in the `grunt build` task-->
+    <!-- build:css css/styles.min.css -->
     <link rel="stylesheet" type="text/css" href="bookreader/BookReader/BookReader.css" id="BRCSS">
-    <!-- Custom CSS overrides -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <!-- endbuild -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
