--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
 
     <!-- build:css css/styles.min.css -->
-    <link rel="stylesheet" type="text/css" href="bookreader/BookReader/BookReader.css" id="BRCSS">
+    <link rel="stylesheet" type="text/css" href="bookreader/BookReader/BookReader.css">
+    <link rel="stylesheet" href="bookreader/BookReader/mmenu/dist/css/jquery.mmenu.all.css"/>
+    <link rel="stylesheet" href="bookreader/BookReader/mmenu/dist/addons/navbars/jquery.mmenu.navbars.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <!-- endbuild -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.3/jquery.colorbox-min.js"></script>
 </head>
 <body>
 
@@ -30,11 +28,19 @@
     </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
 <!-- build:js js/app.min.js -->
-<script src="vendor/dragscrollable.js"></script>
-<script src="vendor/jquery.ui.ipad.js"></script>
-<script src="vendor/jquery.bt.min.js "></script>
+<script src="bookreader/BookReader/jquery.ui.touch-punch.min.js"></script>
+<script src="bookreader/BookReader/dragscrollable-br.js"></script>
+<script src="bookreader/BookReader/jquery.browser.min.js"></script>
+<script src="bookreader/BookReader/jquery.colorbox-min.js"></script>
+<script src="bookreader/BookReader/jquery.bt.min.js "></script>
+<script src="bookreader/BookReader/mmenu/dist/js/jquery.mmenu.min.js"></script>
+<script src="bookreader/BookReader/mmenu/dist/addons/navbars/jquery.mmenu.navbars.min.js"></script>
 <script src="bookreader/BookReader/BookReader.js"></script>
+<script src="bookreader/BookReader/plugins/plugin.mobile_nav.js"></script>
+<script src="bookreader/BookReader/plugins/plugin.url.js"></script>
 <script src="vendor/jquery.query-object.js"></script>
 <script src="js/parse-qs.js"></script>
 <script src="js/app.js"></script>
