--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Sorry! This Bookreader application requires JavaScript to function.
     </noscript>
     <div id="opener">
-        <div id="openerLogo"><img src="cca-images/ccatheme_logo.gif"></div>
+        <div id="openerLogo"></div>
         <div>
             <h1>CCA Libraries Artist's Books Collection</h1>
             <p>This book is part of the CCA Libraries <cite>Artists' Books Collection</cite>, comprised of approximately 340 unique works. The collection includes works by faculty members, students, alumni, and internationally recognized artists. <a href="https://library.cca.edu/cgi-bin/koha/opac-search.pl?q=(su:%7BArtists%27%20books%20collection.%7D)">The Artists' Books Collection</a>, housed in the Meyer and Simpson Libraries, was developed to support study and teaching of bookworks as an art form. The collection is non-circulating but browsable within the library by request.</p>
