update bookreader to 4.2.0
requires big overhaul of most of our CSS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>CCA Libraries Bookreader</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- build:css css/styles.min.css -->
     <link rel="stylesheet" type="text/css" href="bookreader/BookReader/BookReader.css">
