move some files around to make hosting on VAULT work

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- build:css css/styles.min.css -->
+    <!-- build:css styles.min.css -->
     <link rel="stylesheet" type="text/css" href="bookreader/BookReader/BookReader.css">
     <link rel="stylesheet" href="bookreader/BookReader/mmenu/dist/css/jquery.mmenu.all.css"/>
     <link rel="stylesheet" href="bookreader/BookReader/mmenu/dist/addons/navbars/jquery.mmenu.navbars.css"/>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- endbuild -->
 </head>
 <body>
